tests-e2e/tests/package_manager/snapshots/package_manager__cli__duplicate_docs_scalar.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the argument '--output' cannot be used multiple times

Usage: alexandrite docs [FLAGS] [SUBCOMMAND]

For more information, try '--help'.
