tests-e2e/tests/package_manager/snapshots/package_manager__cli__duplicate_lsp_scalar.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--config' cannot be used multiple times
  │
  │ Usage: iris lsp [FLAGS]
  │
  │ For more information, try '--help'.
  │
  │   iris lsp --config {} --config null
  │   ╰─────────────────────────────────
  •
