tests-e2e/tests/package_manager/snapshots/package_manager__cli__duplicate_root_scalar.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
error: the argument '--diagnostics-on-open' cannot be used multiple times

Usage: purescript-alexandrite [FLAGS] [SUBCOMMAND]

For more information, try '--help'.
