tests-e2e/tests/package_manager/snapshots/package_manager__cli__duplicate_typescript_scalar.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 2
--- stdout
--- stderr
Error! · [duplicate_flag] · command line:1:1
  •
  │
  • the argument '--output' cannot be used multiple times
  │
  │ Usage: iris docs typescript [--output <DIR>]
  │
  │ For more information, try '--help'.
  │
  │   iris docs typescript --output one --output two
  │   ╰─────────────────────────────────────────────
  •
