tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_add.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
Add dependencies to a Spago package.

Usage: purescript-alexandrite add [-p --package <NAME>] [--test] <DEPENDENCY>…

Arguments:
  <DEPENDENCY>…  Packages to add.

Flags:
  -p, --package <NAME>  Workspace package whose dependencies should change.
      --test            Add packages as test dependencies.
  -h, --help            Print help
--- stderr
