tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_docs.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
Documentation utilities.

Usage: alexandrite docs [FLAGS] [SUBCOMMAND]

Commands:
  typescript  Generate TypeScript declarations for the documentation JSON schema.
  help        Print this message or the help of the given subcommand(s)

Flags:
      --query-log <LevelFilter>     Log level for the query engine.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --checking-log <LevelFilter>  Log level for the type checker.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: off)
      --docs-log <LEVEL>            Log level for the documentation tool.
                                    [possible values: off, error, warn, info, debug, trace]
                                    (default: info)
      --output <DIR>                Output directory for the generated documentation.
                                    (default: docs)
  -q, --quiet                       Suppress documentation progress output.
      --spago-project <DIR>         Spago project directory containing spago.lock.
      --package <DIR>               Package folder to document.
  -h, --help                        Print help
--- stderr
