tests-e2e/tests/package_manager/snapshots/package_manager__cli__help_lsp.snap
---
source: tests-e2e/tests/package_manager/cli.rs
---
status: 0
--- stdout
Run the language server.

Usage: iris lsp [FLAGS]

Flags:
      --query-log <LevelFilter>          Log level for the query engine.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: off)
      --checking-log <LevelFilter>       Log level for the type checker.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: off)
      --stdio
      --lsp-log <LevelFilter>            Log level for the language server.
                                         [possible values: off, error, warn, info, debug, trace]
                                         (default: info)
      --source-command <SOURCE_COMMAND>  Command to use to get source files.

                                         This argument also disables the spago.lock integration.
      --diagnostics-on-open <bool>       Publish diagnostics on textDocument/didOpen.
                                         (default: true)
      --diagnostics-on-save <bool>       Publish diagnostics on textDocument/didSave.
                                         (default: true)
      --diagnostics-on-change            Publish diagnostics on textDocument/didChange.
  -h, --help                             Print help
--- stderr
